# swit-imap-satellite

./: .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
app/: const.py  database.py  main.py
app/models/: model_email.py  model_system.py  model_user.py
app/routers/: router_admin.py  router_auth.py  router_email.py  router_user.py
app/schemas/: schema_email.py  schema_token.py  schema_user.py
app/services/: service_mail.py  service_picker.py  service_user.py
app/util/: encrypt.py  imap.py  security.py
migration/: env.py
migration/versions/: 1d661240b931_add_read_flag_fiel_cd.py  2d4657d8a54f_message.py  c5cf15144520_remove_mailbox_field.py  ff18525f7cc1_eml_id_크기_변경.py
static/js/: common.js
templates/admin/: main.html  setting.html  user_list.html
templates/layout/: default_layout.html  sidebar.html
